# DreamServer

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  install.ps1  install.sh  ithpipesg
.claude/commands/: code-review.md  deep-research.md  docs-update.md  log-fix.md  pr-check.md  pr.md  tdd.md  team-plan.md  test-coverage.md
archive/: COLLECTIVE.md  RELEASE-v1.0.0.md  config.yaml
dream-server/: .env.example  .env.schema.json  .gitignore  .shellcheckrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EDGE-QUICKSTART.md  FAQ.md  Makefile  PSScriptAnalyzerSettings.psd1  QUICKSTART.md  README.md  SECURITY.md  docker-compose.amd.yml  docker-compose.apple.yml  docker-compose.arc.yml  docker-compose.base.yml  docker-compose.cpu.yml  docker-compose.intel.yml  docker-compose.local.yml  docker-compose.nvidia.yml  docker-compose.tier0.yml  dream-backup.sh  dream-cli  dream-preflight.sh  dream-restore.sh  dream-uninstall.sh  dream-update.sh  get-dream-server.sh  install-core.sh  install.sh  manifest.json  test-stack.sh
installer/: .gitignore  PROGRESS_INTEGRATION.md  index.html  package.json  tailwind.config.js  vite.config.ts
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: commands.rs  docker.rs  gpu.rs  installer.rs  main.rs  state.rs
installer/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
resources/: README.md
(+816 files in other folders)
